--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -2,7 +2,7 @@ name: Bug
 description: Report a bug via form
 title: Some bug
 labels: ["bug"]
-asignees:
+assignees:
   - shibby360
 body:
   - type: textarea
